--- a/index.html
+++ b/index.html
@@ -207,6 +207,30 @@
 
                   </a>
 
+                  <a class="list-group-item" href="list-employee-endpoint.html">
+
+                    <!-- Icon -->
+                    <div class="icon icon-sm text-primary">
+                      <i class="neu-groups" style="font-size: 24px;"></i>
+                    </div>
+
+                    <!-- Content -->
+                    <div class="ml-4">
+
+                      <!-- Heading -->
+                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
+                        List Employee Endpoint
+                      </h6>
+
+                      <!-- Text -->
+                      <p class="font-size-sm text-gray-700 mb-0">
+                        Scrape Linkedin List Employee
+                      </p>
+
+                    </div>
+
+                  </a>
+
                 </div>
               </div>
             </li>
@@ -968,7 +992,12 @@ response = requests.get(api_endpoint,
                 <a href="linkedin-profile-email-enrichment.html" class="text-reset">
                   Linkedin Profile Email Enrichment
                 </a>
-              </li> 
+              </li>
+              <li class="mb-3">
+                <a href="list-employee-endpoint.html" class="text-reset">
+                  List Employee Endpoint
+                </a>
+              </li>
             </ul>
 
           </div>
