--- a/list-employee-endpoint.html
+++ b/list-employee-endpoint.html
@@ -295,7 +295,7 @@
 
     <!-- WELCOME
     ================================================== -->
-    <section class="pt-8 pb-11 pt-md-9 pb-md-12 py-lg-6 bg-light bg-between border-bottom" style="background-image: url(./assets/img/illustrations/jobs-linkedin-left.png), url(./assets/img/illustrations/jobs-linkedin-right.png);">
+    <section class="pt-8 pb-11 pt-md-9 pb-md-12 py-lg-6 bg-light bg-between border-bottom" style="background-image: url(assets/img/illustrations/list\ employee-left.png), url(assets/img/illustrations/list\ employee-right.png);">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-7 text-center" data-aos="fade-up">
