--- a/people-linkedin-profile.html
+++ b/people-linkedin-profile.html
@@ -206,6 +206,30 @@
 
                   </a>
 
+                  <a class="list-group-item" href="list-employee-endpoint.html">
+
+                    <!-- Icon -->
+                    <div class="icon icon-sm text-primary">
+                      <i class="neu-groups" style="font-size: 24px;"></i>
+                    </div>
+
+                    <!-- Content -->
+                    <div class="ml-4">
+
+                      <!-- Heading -->
+                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
+                        List Employee Endpoint
+                      </h6>
+
+                      <!-- Text -->
+                      <p class="font-size-sm text-gray-700 mb-0">
+                        Scrape Linkedin List Employee
+                      </p>
+
+                    </div>
+
+                  </a>
+
                 </div>
               </div>
             </li>
@@ -1000,7 +1024,12 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
                 <a href="linkedin-profile-email-enrichment.html" class="text-reset">
                   Linkedin Profile Email Enrichment
                 </a>
-              </li> 
+              </li>
+              <li class="mb-3">
+                <a href="list-employee-endpoint.html" class="text-reset">
+                  List Employee Endpoint
+                </a>
+              </li>
             </ul>
 
           </div>
