--- a/pricing.html
+++ b/pricing.html
@@ -7,6 +7,7 @@
 
     <!-- Libs CSS -->
     <link rel="stylesheet" href="./assets/fonts/Feather/feather.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/neuicons@1.5.0/css/neu.min.css"> 
     <link rel="stylesheet" href="./assets/libs/@fancyapps/fancybox/dist/jquery.fancybox.min.css">
     <link rel="stylesheet" href="./assets/libs/aos/dist/aos.css">
     <link rel="stylesheet" href="./assets/libs/choices.js/public/assets/styles/choices.min.css">
@@ -27,7 +28,7 @@
   </head>
   <body class="pt-10 bg-light">
     
-    <!-- NAVBAR
+     <!-- NAVBAR
     ================================================== -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white border-bottom">
       <div class="container-fluid">
@@ -198,6 +199,30 @@
                       <!-- Text -->
                       <p class="font-size-sm text-gray-700 mb-0">
                         Work email from Linkedin profiles
+                      </p>
+
+                    </div>
+
+                  </a>
+
+                  <a class="list-group-item" href="list-employee-endpoint.html">
+
+                    <!-- Icon -->
+                    <div class="icon icon-sm text-primary">
+                      <i class="neu-groups" style="font-size: 24px;"></i>
+                    </div>
+
+                    <!-- Content -->
+                    <div class="ml-4">
+
+                      <!-- Heading -->
+                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
+                        List Employee Endpoint
+                      </h6>
+
+                      <!-- Text -->
+                      <p class="font-size-sm text-gray-700 mb-0">
+                        Scrape Linkedin List Employee
                       </p>
 
                     </div>
@@ -756,7 +781,12 @@
                 <a href="linkedin-profile-email-enrichment.html" class="text-reset">
                   Linkedin Profile Email Enrichment
                 </a>
-              </li> 
+              </li>
+              <li class="mb-3">
+                <a href="list-employee-endpoint.html" class="text-reset">
+                  List Employee Endpoint
+                </a>
+              </li>
             </ul>
 
           </div>
