update progress bar

--- a/agenbagi-user-dashboard.html
+++ b/agenbagi-user-dashboard.html
@@ -146,25 +146,46 @@
 
               <div class="card-header">
 
-                <!-- Heading -->
-                <h3 class="display-5">
-                  Progress report
-                </h3>
+                <div class="row align-items-center">
+                  <div class="col">
+                    <!-- Heading -->
+                    <h3 class="display-5">
+                      Progress report
+                    </h3>
+                    </div>
+    
+                    <div class="col-4 col-auto">
+                      <!-- Select -->
+                      <select class="custom-select custom-select-sm">
+                        <option selected>3 June 2021</option>
+                        <option>2 June 2021</option>
+                        <option>1 June 2021</option>
+                      </select>
+                    </div>
+                </div>
 
               </div>
 
               <div class="card-body">
 
-                <p class="mb-6 text-muted">Here's what you earned from activating the app that started on <span class="text-black font-weight-bold">1st March</span> up to the end of <span class="text-black font-weight-bold">31st March 2021</span>.</p>
+                <h3 class="">Maintain an average of 15 extension installs till the end of the month to qualify for payout</h3>
+                <p class="mb-6 text-muted font-size-lg">Here's what you earned from activating the app at <span class="text-black font-weight-bold">3 June 2021</span>.</p>
 
                 <div class="row">
                   <div class="col text-left small text-muted mb-2">0%</div>
                   <div class="col text-right small text-muted mb-2">100%</div>
                 </div>
       
-                <div class="progress mb-6" style="height: 24px;">
-                  <div class="progress-bar progress-bar-striped small" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">1 hour</div>
+                <div class="progress" style="height: 24px;">
+                  <div class="progress-bar progress-bar-striped small" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100 hours</div>
                 </div>                 
+
+                <div class="row">
+                  <div class="col mt-2"></div>
+                  <div class="col-auto text-right small mt-2">
+                    Extra of 5 agents with 50 work hours
+                  </div>
+                </div>
 
               </div>
 
