--- a/agenbagi-user-dashboard.html
+++ b/agenbagi-user-dashboard.html
@@ -100,6 +100,28 @@
 
           <div class="col-12 col-md-9">
 
+            <!-- Competition rank -->
+            <div class="card card-bleed shadow-light-lg mb-6">
+
+              <div class="card-header">
+
+                <span class="price display-2 text-primary">3</span>
+                <span class="h2 align-self-end">/50</span>
+                <p class="h3 text-gray-700">You ranked <span class="text-primary">3rd</span> out of 50th</p>
+
+              </div>
+
+              <div class="card-body">
+
+                <p class="font-size-lg">
+                  Add <span class="text-info">2 more installs</span> to get to the next rank.<br>
+                  <span class="font-size-sm text-gray-700">PS: Smaller number is better than a higher number, for example, rank-1st > rank-30th.</span>
+                </p>
+
+              </div>
+
+            </div>
+
             <!-- Unique link -->
             <div class="card card-bleed shadow-light-lg mb-6">
 
