update user dahsboard

--- a/agenbagi-user-dashboard.html
+++ b/agenbagi-user-dashboard.html
@@ -181,7 +181,8 @@
 
               <div class="card-body">
 
-                <h3 class="display-4 mb-8">Maintain an average of 15 extension installs till the end of the month to qualify for payout</h3>
+                <h2 class="font-weight-bold">You are <span class="text-danger">NOT on track</span> to meet your quota at the end of the month</h2>
+                <h3 class="mb-8 text-gray-700">Maintain an average of <span class="text-info">15 extension installs</span> till the end of the month to qualify for payout</h3>
 
                 <!-- Progress bar -->
                 <div class="mb-8">
@@ -254,6 +255,8 @@
                     <div class="progress-bar bg-success progress-bar-striped small" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">10 hours</div>
                   </div>
                 </div>
+
+                <button class="btn btn-primary-soft lift lift-lg btn-block btn-sm text-uppercase">Show more</button>
 
               </div>
 
