--- a/top-up-and-gift.html
+++ b/top-up-and-gift.html
@@ -298,30 +298,30 @@
     ================================================== -->
     <section class="pt-4 py-md-11 border-bottom">
       <div class="container">
-        <div class="row align-items-center">
-          <div class="col-12 col-md-5 col-lg-6 order-md-2">
+        <div class="row align-items-center justify-content-center">
+          <div class="col-12 col-md-10">
 
             <!-- Image -->
-            <img src="assets/img/illustrations/Free Proxycurl credits.png" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0" alt="..." data-aos="fade-up" data-aos-delay="100">
+            <img src="assets/img/illustrations/Free Proxycurl credits.png" class="img-fluid mb-6 mb-md-0" alt="..." data-aos="fade-up" data-aos-delay="100">
 
           </div>
-          <div class="col-12 col-md-7 col-lg-6 order-md-1" data-aos="fade-up">
+          <div class="col-12 col-md-10" data-aos="fade-up">
 
             <!-- Heading -->
-            <h1 class="display-4 text-center text-md-left">
+            <h1 class="display-4 text-center">
               Here is 10000 credits gifted by your friend <br>
               <span class="text-primary">nubela@gmail.com</span>
             </h1>
 
             <!-- Text -->
-            <p class="font-size-lg text-center text-md-left text-muted mb-6 mb-lg-8">
+            <p class="font-size-lg text-center text-muted mb-6 mb-lg-8">
               10000 credits will let you scrape up to <span class="text-black">10,000 Linkedin profiles programmatically</span>
             </p>
 
             <!-- Form -->
             <form>
-              <div class="row gx-4">
-                <div class="col-12 col-lg">
+              <div class="row gx-4 justify-content-center">
+                <div class="col-12 col-md-5">
 
                   <!-- Search -->
                   <div class="form-group mb-lg-0">
