--- a/proxycurl-dashboard.html
+++ b/proxycurl-dashboard.html
@@ -196,7 +196,7 @@
 
                     <div class="container">
                       <div class="row mb-2">
-                        <div class="col-6">
+                        <div class="col-5">
   
                           <div class="form-group">
                             <label>
@@ -206,8 +206,18 @@
                           </div>
     
                         </div>
+
+                        <div class="col-2">
+
+                          <div class="text-center align-items-center">
+                            <div class="d-flex align-items-center justify-content-center mt-7">
+                              <i class="neu-compare text-primary" style="font-size: 24px;"></i>
+                            </div>
+                          </div>
+
+                        </div>
   
-                        <div class="col-6">
+                        <div class="col-5">
   
                           <div class="form-group">
                             <label for="name">
