add company directories poage

--- a/employee-listing-page.html
+++ b/employee-listing-page.html
@@ -301,6 +301,8 @@
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-8 text-center">
 
+            <!-- logo -->
+            <img src="assets/img/logos/google-2015.svg" height="48" class="mb-4" alt="Google logo svg">
             <!-- Heading -->
             <h2>
               Employees result from <span class="text-primary">Google</span>.
@@ -784,7 +786,7 @@
         </div>
 
       </div> <!-- / .container -->
-    </footer>    
+    </footer>
 
     <!-- JAVASCRIPT
     ================================================== -->
