--- a/proxycurl-connect.html
+++ b/proxycurl-connect.html
@@ -36,7 +36,7 @@
         <div class="row justify-content-center align-items-center">
 
           <div class="col-12 col-md-5 mb-8">
-            <img class="img-fluid screenshot" src="illustration_placement_portrait.png">
+            <img class="img-fluid screenshot" alt="Proxycurl connect people detail" src="assets/img/Proxycurl Connect SS/main img.png">
           </div>
 
           <div class="col-12 col-md-7 mb-8">
@@ -126,13 +126,13 @@
             </div>
   
             <div class="col-12 col-md-6">
-              <img class="img-fluid" src="Illustration_landscape_placement.png">
+              <img class="img-fluid shadow" alt="Proxycurl Connect find companies" src="assets/img/Proxycurl Connect SS/recent.png">
             </div>
           </div>
 
           <div class="row align-items-center border-bottom mb-10">
             <div class="col-12 col-md-6">
-              <img class="img-fluid" src="Illustration_landscape_placement.png">
+              <img class="img-fluid shadow" alt="Proxycurl Connect people result" src="assets/img/Proxycurl Connect SS/people.png">
             </div>
 
             <div class="col-12 col-md-6">
@@ -155,7 +155,7 @@
             </div>
   
             <div class="col-12 col-md-6">
-              <img class="img-fluid" src="Illustration_landscape_placement.png">
+              <img class="img-fluid shadow" alt="Proxycurl Connect people detail" src="assets/img/Proxycurl Connect SS/people detail.png">
             </div>
           </div>          
 
@@ -177,7 +177,7 @@
 
           <div class="row justify-content-center">  
             <div class="col-10 text-center">
-              <img class="img-fluid screenshot contact-img" src="Illustration_landscape_placement.png">
+              <img class="img-fluid screenshot contact-img" alt="Proxycurl Connect browser extension" src="assets/img/Proxycurl Connect SS/browser extension.png">
             </div>
           </div>
 
