--- a/proxycurl-connect.html
+++ b/proxycurl-connect.html
@@ -300,7 +300,7 @@
         <div class="row justify-content-center align-items-center">
 
           <div class="col-12 col-md-5 mb-8">
-            <img class="img-fluid screenshot" alt="Proxycurl connect people detail" src="assets/img/Proxycurl Connect SS/main img.png">
+            <img class="img-fluid screenshot" alt="Proxycurl connect people detail" src="assets/img/Proxycurl Connect SS/Proxycurl Connect-demo.gif">
           </div>
 
           <div class="col-12 col-md-7 mb-8">
