--- a/top-up-and-gift.html
+++ b/top-up-and-gift.html
@@ -542,7 +542,7 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
 
             <div class="row justify-content-center">
 
-              <img class="img-fluid" src="./assets/img/photos/spreadsheet.png">
+              <img class="img-fluid screenshot mb-6" src="./assets/img/photos/spreadsheet blur.png">
 
             </div>
 
