--- a/company-linkedin-profile.html
+++ b/company-linkedin-profile.html
@@ -230,6 +230,30 @@
 
                   </a>
 
+                  <a class="list-group-item" href="reverse-email-lookup.html">
+
+                    <!-- Icon -->
+                    <div class="icon icon-sm text-primary">
+                      <i class="neu-expand-user" style="font-size: 24px;"></i>
+                    </div>
+
+                    <!-- Content -->
+                    <div class="ml-4">
+
+                      <!-- Heading -->
+                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
+                        Reverse Email Lookup
+                      </h6>
+
+                      <!-- Text -->
+                      <p class="font-size-sm text-gray-700 mb-0">
+                        Takes a work email address and returns you a Linkedin Profile URL
+                      </p>
+
+                    </div>
+
+                  </a>
+
                 </div>
               </div>
             </li>
@@ -1136,6 +1160,11 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
               <li class="mb-3">
                 <a href="list-employee-endpoint.html" class="text-reset">
                   List Employee Endpoint
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="reverse-email-lookup.html" class="text-reset">
+                  Reverse Email Lookup
                 </a>
               </li>
             </ul>
