--- a/proxycurl-connect.html
+++ b/proxycurl-connect.html
@@ -36,7 +36,7 @@
 
         <!-- Brand -->
         <a class="navbar-brand" href="index.html">
-          <img src="assets/img/Proxycurl Connect logo.png" class="navbar-brand-img" alt="proxycurl logo">
+          <img src="./assets/img/Proxycurl-Logotype-Primary@1x.png" class="navbar-brand-img" alt="proxycurl logo">
         </a>
 
         <!-- Toggler -->
@@ -224,6 +224,30 @@
                       <!-- Text -->
                       <p class="font-size-sm text-gray-700 mb-0">
                         Scrape Linkedin List Employee
+                      </p>
+
+                    </div>
+
+                  </a>
+
+                  <a class="list-group-item" href="reverse-email-lookup.html">
+
+                    <!-- Icon -->
+                    <div class="icon icon-sm text-primary">
+                      <i class="neu-expand-user" style="font-size: 24px;"></i>
+                    </div>
+
+                    <!-- Content -->
+                    <div class="ml-4">
+
+                      <!-- Heading -->
+                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
+                        Reverse Email Lookup
+                      </h6>
+
+                      <!-- Text -->
+                      <p class="font-size-sm text-gray-700 mb-0">
+                        Takes a work email address and returns you a Linkedin Profile URL
                       </p>
 
                     </div>
@@ -686,7 +710,7 @@
           <div class="col-12 col-md-4 col-lg-3">
         
             <!-- Brand -->
-            <img src="assets/img/Proxycurl Connect logo.png" alt="proxycurl logo" class="footer-brand img-fluid mb-2">
+            <img src="./assets/img/Proxycurl-Logotype-Primary@1x.png" alt="proxycurl logo" class="footer-brand img-fluid mb-2">
 
           </div>
           <div class="col-6 col-md-4 col-lg-2">
@@ -763,6 +787,11 @@
               <li class="mb-3">
                 <a href="list-employee-endpoint.html" class="text-reset">
                   List Employee Endpoint
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="reverse-email-lookup.html" class="text-reset">
+                  Reverse Email Lookup
                 </a>
               </li>
             </ul>
