add secondary buttn

--- a/reverse-email-lookup.html
+++ b/reverse-email-lookup.html
@@ -341,8 +341,12 @@
               </div>
 
               <!-- Buttons -->
-              <button type="button" class="btn btn-primary btn-md btn-block text-center">
+              <button type="button" class="btn btn-primary mb-4 btn-md btn-block text-center">
                 Get trial API key
+              </button>
+
+              <button class="btn btn-primary-soft btn-md btn-block">
+                Read Docs
               </button>
             </form>
 
@@ -367,7 +371,7 @@
           </div>
         </div> <!-- / .row -->
 
-        <div class="row">
+        <div class="row mb-6">
 
           <div class="col-12 col-md-6 col-lg-5">
 
@@ -415,7 +419,7 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
             </h4>
 
             <!-- Text -->
-            <p class="font-size-sm text-muted mb-6 mb-md-0">
+            <p class="font-size-sm text-muted mb-6">
               This is 8M's Linkedin Company Profile in JSON format
             </p>
 
@@ -498,6 +502,14 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
           </div>
 
         </div> <!-- / .row -->
+
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-5 text-center">
+            <button class="btn btn-primary-soft btn-md btn-block">
+              Read Docs
+            </button>
+          </div>
+        </div>
 
       </div> <!-- / .container -->
     </section>
