update email lookup api emdpoint

--- a/linkdb.html
+++ b/linkdb.html
@@ -184,7 +184,7 @@
 
                   </a> 
                   
-                  <a class="list-group-item" href="linkedin-profile-email-enrichment.html">
+                  <a class="list-group-item" href="email-lookup-api-endpoint.html">
 
                     <!-- Icon -->
                     <div class="icon icon-sm text-primary">
@@ -196,7 +196,7 @@
 
                       <!-- Heading -->
                       <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Linkedin Profile Email Enrichment
+                        Email Lookup API Endpoint
                       </h6>
 
                       <!-- Text -->
@@ -909,8 +909,8 @@ AND parsed_data @> '{"experiences": [{"ends_at": null, "company": "Electronic Ar
                 </a>
               </li> 
               <li class="mb-3">
-                <a href="linkedin-profile-email-enrichment.html" class="text-reset">
-                  Linkedin Profile Email Enrichment
+                <a href="email-lookup-api-endpoint.html" class="text-reset">
+                  Email Lookup API Endpoint
                 </a>
               </li>
               <li class="mb-3">
