--- a/company-linkedin-profile.html
+++ b/company-linkedin-profile.html
@@ -182,7 +182,7 @@
 
                   </a> 
                   
-                  <a class="list-group-item" href="linkedin-profile-email-enrichment.html">
+                  <a class="list-group-item" href="email-lookup-api-endpoint.html">
 
                     <!-- Icon -->
                     <div class="icon icon-sm text-primary">
@@ -194,7 +194,7 @@
 
                       <!-- Heading -->
                       <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Linkedin Profile Email Enrichment
+                        Email Lookup API Endpoint
                       </h6>
 
                       <!-- Text -->
@@ -1153,8 +1153,8 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
                 </a>
               </li> 
               <li class="mb-3">
-                <a href="linkedin-profile-email-enrichment.html" class="text-reset">
-                  Linkedin Profile Email Enrichment
+                <a href="email-lookup-api-endpoint.html" class="text-reset">
+                  Email Lookup API Endpoint
                 </a>
               </li>
               <li class="mb-3">
