--- a/pricing.html
+++ b/pricing.html
@@ -181,7 +181,7 @@
 
                   </a> 
                   
-                  <a class="list-group-item" href="linkedin-profile-email-enrichment.html">
+                  <a class="list-group-item" href="email-lookup-api-endpoint.html">
 
                     <!-- Icon -->
                     <div class="icon icon-sm text-primary">
@@ -193,7 +193,7 @@
 
                       <!-- Heading -->
                       <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Linkedin Profile Email Enrichment
+                        Email Lookup API Endpoint
                       </h6>
 
                       <!-- Text -->
@@ -223,6 +223,30 @@
                       <!-- Text -->
                       <p class="font-size-sm text-gray-700 mb-0">
                         Scrape Linkedin List Employee
+                      </p>
+
+                    </div>
+
+                  </a>
+
+                  <a class="list-group-item" href="reverse-email-lookup.html">
+
+                    <!-- Icon -->
+                    <div class="icon icon-sm text-primary">
+                      <i class="neu-expand-user" style="font-size: 24px;"></i>
+                    </div>
+
+                    <!-- Content -->
+                    <div class="ml-4">
+
+                      <!-- Heading -->
+                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
+                        Reverse Email Lookup
+                      </h6>
+
+                      <!-- Text -->
+                      <p class="font-size-sm text-gray-700 mb-0">
+                        Takes a work email address and returns you a Linkedin Profile URL
                       </p>
 
                     </div>
@@ -291,7 +315,6 @@
 
       </div>
     </nav>
-
 
     <!-- WELCOME
     ================================================== -->
@@ -778,13 +801,18 @@
                 </a>
               </li> 
               <li class="mb-3">
-                <a href="linkedin-profile-email-enrichment.html" class="text-reset">
-                  Linkedin Profile Email Enrichment
+                <a href="email-lookup-api-endpoint.html" class="text-reset">
+                  Email Lookup API Endpoint
                 </a>
               </li>
               <li class="mb-3">
                 <a href="list-employee-endpoint.html" class="text-reset">
                   List Employee Endpoint
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="reverse-email-lookup.html" class="text-reset">
+                  Reverse Email Lookup
                 </a>
               </li>
             </ul>
