--- a/index.html
+++ b/index.html
@@ -308,9 +308,16 @@
 
           </ul>
 
+          <div class="text-center ml-auto">
+            <!-- Button -->
+            <a class="btn btn-sm btn-link" href="login.html">
+              Log in
+            </a>
+          </div>
+
           <!-- Button -->
-          <a class="navbar-btn btn btn-sm btn-primary lift ml-auto" href="login.html">
-            Log in
+          <a class="navbar-btn btn btn-sm btn-primary lift" href="register.html">
+            Sign up
           </a>
 
         </div>
