--- a/employee-listing-page.html
+++ b/employee-listing-page.html
@@ -32,7 +32,7 @@
 
      <!-- NAVBAR
     ================================================== -->
-    <nav class="navbar navbar-expand-lg border-bottom navbar-light bg-white fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white border-bottom">
       <div class="container-fluid">
 
         <!-- Brand -->
@@ -183,7 +183,7 @@
 
                   </a> 
                   
-                  <a class="list-group-item" href="linkedin-profile-email-enrichment.html">
+                  <a class="list-group-item" href="email-lookup-api-endpoint.html">
 
                     <!-- Icon -->
                     <div class="icon icon-sm text-primary">
@@ -195,7 +195,7 @@
 
                       <!-- Heading -->
                       <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Linkedin Profile Email Enrichment
+                        Email Lookup API Endpoint
                       </h6>
 
                       <!-- Text -->
@@ -225,6 +225,30 @@
                       <!-- Text -->
                       <p class="font-size-sm text-gray-700 mb-0">
                         Scrape Linkedin List Employee
+                      </p>
+
+                    </div>
+
+                  </a>
+
+                  <a class="list-group-item" href="reverse-email-lookup.html">
+
+                    <!-- Icon -->
+                    <div class="icon icon-sm text-primary">
+                      <i class="neu-expand-user" style="font-size: 24px;"></i>
+                    </div>
+
+                    <!-- Content -->
+                    <div class="ml-4">
+
+                      <!-- Heading -->
+                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
+                        Reverse Email Lookup
+                      </h6>
+
+                      <!-- Text -->
+                      <p class="font-size-sm text-gray-700 mb-0">
+                        Takes a work email address and returns you a Linkedin Profile URL
                       </p>
 
                     </div>
@@ -284,9 +308,16 @@
 
           </ul>
 
+          <div class="text-center ml-auto">
+            <!-- Button -->
+            <a class="btn btn-sm btn-link" href="login.html">
+              Log in
+            </a>
+          </div>
+
           <!-- Button -->
-          <a class="navbar-btn btn btn-sm btn-primary lift ml-auto" href="login.html">
-            Log in
+          <a class="navbar-btn btn btn-sm btn-primary lift" href="register.html">
+            Sign up
           </a>
 
         </div>
