--- a/linkedin-profile-email-enrichment.html
+++ b/linkedin-profile-email-enrichment.html
@@ -184,7 +184,7 @@
 
                   </a> 
                   
-                  <a class="list-group-item" href="linkedin-profile-email-enrichment.html">
+                  <a class="list-group-item" href="email-lookup-api-endpoint.html">
 
                     <!-- Icon -->
                     <div class="icon icon-sm text-primary">
@@ -196,7 +196,7 @@
 
                       <!-- Heading -->
                       <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Linkedin Profile Email Enrichment
+                        Email Lookup API Endpoint
                       </h6>
 
                       <!-- Text -->
@@ -309,9 +309,16 @@
 
           </ul>
 
+          <div class="text-center ml-auto">
+            <!-- Button -->
+            <a class="btn btn-sm btn-link" href="login.html">
+              Log in
+            </a>
+          </div>
+
           <!-- Button -->
-          <a class="navbar-btn btn btn-sm btn-primary lift ml-auto" href="login.html">
-            Log in
+          <a class="navbar-btn btn btn-sm btn-primary lift" href="register.html">
+            Sign up
           </a>
 
         </div>
