--- a/register.html
+++ b/register.html
@@ -56,7 +56,7 @@
 
               <!-- Password -->
               <div class="form-group">
-                <label for="email">
+                <label for="password">
                   Password
                 </label>
                 <input type="password" class="form-control" id="password" placeholder="input password">
@@ -64,7 +64,7 @@
 
               <!-- Password Confirmation -->
               <div class="form-group">
-                <label for="email">
+                <label for="password">
                   Re-type Password
                 </label>
                 <input type="password" class="form-control" id="password" placeholder="re-type password">
