--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
         <div class="row align-items-center justify-content-center no-gutters min-vh-100">
 
           <div class="col-8 col-md-6 col-lg-7 offset-md-1 order-md-2 mt-auto mt-md-0 pt-8 pb-4 py-md-11">
-            <img class="img-fluid" src="illustration_placement_portrait.png">
+            <img class="img-fluid" src="assets/img/illustrations/login illustration-01.png">
           </div>
 
           <div class="col-12 col-md-5 col-lg-4 order-md-1 mb-auto mb-md-0 pb-8 py-md-11">
