--- a/login.html
+++ b/login.html
@@ -78,7 +78,7 @@
             <!-- Sign Up text -->
             <p class="mb-0 font-size-sm text-muted">
               Don't have an account?
-              <a class="text-primary font-weight-bold" href="#">Sign up!</a>
+              <a class="text-primary font-weight-bold" href="register.html">Sign up!</a>
             </p>
 
           </div>
