--- a/register.html
+++ b/register.html
@@ -80,7 +80,7 @@
             <!-- Sign Up text -->
             <p class="mb-0 font-size-sm text-center text-muted">
               Already have an account?
-              <a class="text-primary font-weight-bold" href="#">Sign in</a>.
+              <a class="text-primary font-weight-bold" href="login.html">Sign in</a>.
             </p>
 
           </div>
