--- a/register.html
+++ b/register.html
@@ -39,7 +39,7 @@
               <img src="assets/img/Proxycurl-Logotype-Primary@1x.png" class="mb-2 img-fluid" alt="proxycurl logo">
             </a>
 
-            <p class="text-muted text-center mb-6 font-size-lg">
+            <p class="text-muted mb-6 font-size-lg">
               Sign up with Proxycurl for free
             </p>
 
@@ -78,7 +78,7 @@
             </form>
 
             <!-- Sign Up text -->
-            <p class="mb-0 font-size-sm text-center text-muted">
+            <p class="mb-0 font-size-sm text-muted">
               Already have an account?
               <a class="text-primary font-weight-bold" href="login.html">Sign in</a>.
             </p>
