--- a/forget-password.html
+++ b/forget-password.html
@@ -22,7 +22,7 @@
     <!-- Theme CSS -->
     <link rel="stylesheet" href="./assets/css/theme.min.css">
 
-    <title>Proxycurl - Register</title>
+    <title>Proxycurl - Forget password</title>
 
   </head>
   <body>
@@ -40,7 +40,7 @@
             </a>
 
             <p class="text-muted mb-6 font-size-lg">
-              Sign up with Proxycurl for free
+              Generate new password
             </p>
 
             <!-- Form -->
@@ -76,12 +76,6 @@
               </a>
 
             </form>
-
-            <!-- Sign Up text -->
-            <p class="mb-0 font-size-sm text-muted">
-              Already have an account?
-              <a class="text-primary font-weight-bold" href="login.html">Sign in</a>.
-            </p>
 
           </div>
         </div> <!-- / .row -->
