--- a/login-next.html
+++ b/login-next.html
@@ -22,7 +22,7 @@
     <!-- Theme CSS -->
     <link rel="stylesheet" href="./assets/css/theme.min.css">
 
-    <title>Proxycurl</title>
+    <title>Proxycurl - Login</title>
 
   </head>
   <body>
