--- a/forget-password.html
+++ b/forget-password.html
@@ -40,7 +40,7 @@
             </a>
 
             <p class="text-muted mb-6 font-size-lg">
-              Generate new password
+              Create a Proxycurl account
             </p>
 
             <!-- Form -->
