--- a/login-next.html
+++ b/login-next.html
@@ -66,9 +66,8 @@
             </form>
 
             <!-- Sign Up text -->
-            <p class="mb-0 font-size-sm text-center text-muted">
-              Forgot password?<br>
-              Please <a class="text-primary font-weight-bold" href="#">send me a recovery email</a>
+            <p class="mb-0 font-size-sm">
+              <a class="text-primary font-weight-bold" href="forget-password.html">Forget password?</a>
             </p>
 
           </div>
