--- a/proxycurl-dashboard.html
+++ b/proxycurl-dashboard.html
@@ -79,15 +79,20 @@
                   </h6>
 
                   <!-- List -->
-                  <ul class="card-list list text-gray-700 mb-6">
+                  <ul class="card-list list text-gray-700">
                     <li class="list-item active">
-                      <a class="list-link text-reset" href="account-general.html">
+                      <a class="list-link text-reset" href="proxycurl-dashboard.html">
                         Api Key and Billing
                       </a>
                     </li>
                     <li class="list-item">
                       <a class="list-link text-reset" href="#">
                         Documentation
+                      </a>
+                    </li>
+                    <li class="list-item">
+                      <a class="list-link text-reset" href="proxycurl-dashboard-invoices.html">
+                        Invoices
                       </a>
                     </li>
                   </ul>
