--- a/proxycurl-dashboard-invoices.html
+++ b/proxycurl-dashboard-invoices.html
@@ -133,7 +133,7 @@
 
                         <!-- Text -->
                         <small class="text-gray-700">
-                          Billed Apr, 24, 2020
+                          $2000, billed Apr, 24, 2020
                         </small>
 
                       </div>
@@ -159,7 +159,7 @@
 
                         <!-- Text -->
                         <small class="text-gray-700">
-                          Billed Apr, 24, 2020
+                          $1200, billed Apr, 24, 2020
                         </small>
 
                       </div>
@@ -185,7 +185,7 @@
 
                         <!-- Text -->
                         <small class="text-gray-700">
-                          Billed Apr, 24, 2020
+                          $40, billed Apr, 24, 2020
                         </small>
 
                       </div>
@@ -211,7 +211,7 @@
 
                         <!-- Text -->
                         <small class="text-gray-700">
-                          Billed Apr, 24, 2020
+                          $15, billed Apr, 24, 2020
                         </small>
 
                       </div>
@@ -237,7 +237,7 @@
 
                         <!-- Text -->
                         <small class="text-gray-700">
-                          Billed Apr, 24, 2020
+                          $25, billed Apr, 24, 2020
                         </small>
 
                       </div>
