add Dwarf Forms logo

--- a/dwarf-forms.html
+++ b/dwarf-forms.html
@@ -37,7 +37,7 @@
 
         <!-- Brand -->
         <a class="navbar-brand" href="index.html">
-          <img src="./assets/img/Proxycurl-Logotype-Primary@1x.png" class="navbar-brand-img" alt="proxycurl logo">
+          <img src="/assets/dwarf forms/Dwarf Forms_Logo.png" class="navbar-brand-img" alt="proxycurl logo">
         </a>
 
         <!-- Toggler -->
@@ -330,6 +330,8 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-lg-10 text-center">
+
+            <img alt="Dwarf Forms Logo" width="192" class="img-fluid mb-6" src="assets/dwarf forms/Dwarf Forms_Logo_Center.svg">
 
             <!-- Headin -->
             <h1 class="display-3 fw-bold aos-init aos-animate" data-aos="fade-up" data-aos-delay="50">
