--- a/dwarf-forms.html
+++ b/dwarf-forms.html
@@ -36,7 +36,7 @@
       <div class="container-fluid">
 
         <!-- Brand -->
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="dwarf-forms.html">
           <img src="/assets/dwarf forms/Dwarf Forms_Logo.png" class="navbar-brand-img" alt="proxycurl logo">
         </a>
 
@@ -58,7 +58,7 @@
 
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" id="navbarDocumentation" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
-                Linkedin API <i class="fe fe-chevron-down"></i>
+                Dwarf <i class="fe fe-chevron-down"></i>
               </a>
               <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDocumentation">
                 <div class="list-group list-group-flush">
@@ -75,180 +75,12 @@
 
                       <!-- Heading -->
                       <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Person Profile Endpoint
+                        Pricing
                       </h6>
 
                       <!-- Text -->
                       <p class="font-size-sm text-gray-700 mb-0">
                         Scrape Linkedin Profiles
-                      </p>
-
-                    </div>
-
-                  </a>
-
-                  <a class="list-group-item" href="company-linkedin-profile.html">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-company" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Company Profile Endpoint
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Scrape Linkedin Companies
-                      </p>
-
-                    </div>
-
-                  </a>
-
-                  <a class="list-group-item" href="jobs-linkedin-profile.html">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-bag" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Job Profile Endpoint
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Scrape Linkedin Jobs
-                      </p>
-
-                    </div>
-
-                  </a>
-
-                  <a class="list-group-item" href="linkdb.html">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-db" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        LinkDB
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Database of Linkedin Profiles
-                      </p>
-
-                    </div>
-
-                  </a>
-
-                  <a class="list-group-item" href="linkdb-snapshots.html">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-data-quality" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        LinkDB Snapshots
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Snapshot of our database
-                      </p>
-
-                    </div>
-
-                  </a> 
-                  
-                  <a class="list-group-item" href="email-lookup-api-endpoint.html">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-email" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Email Lookup API Endpoint
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Work email from Linkedin profiles
-                      </p>
-
-                    </div>
-
-                  </a>
-
-                  <a class="list-group-item" href="list-employee-endpoint.html">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-groups" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        List Employee Endpoint
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Scrape Linkedin List Employee
-                      </p>
-
-                    </div>
-
-                  </a>
-
-                  <a class="list-group-item" href="reverse-email-lookup.html">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-expand-user" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Reverse Email Lookup
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Takes a work email address and returns you a Linkedin Profile URL
                       </p>
 
                     </div>
@@ -261,16 +93,16 @@
 
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" id="navbarDocumentation" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
-                Free Tools <i class="fe fe-chevron-down"></i>
+                Proxycurl <i class="fe fe-chevron-down"></i>
               </a>
               <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDocumentation">
                 <div class="list-group list-group-flush">
-                  
-                  <a class="list-group-item" href="identify.html" target="_blank">
+
+                  <a class="list-group-item" href="people-linkedin-profile.html">
 
                     <!-- Icon -->
                     <div class="icon icon-sm text-primary">
-                      <i class="neu-search" style="font-size: 24px;"></i>
+                      <i class="neu-user-circle" style="font-size: 24px;"></i>
                     </div>
 
                     <!-- Content -->
@@ -278,12 +110,36 @@
 
                       <!-- Heading -->
                       <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Decision maker finder
+                        Docs
                       </h6>
 
                       <!-- Text -->
                       <p class="font-size-sm text-gray-700 mb-0">
-                        Identify decision makers of prospect
+                        Scrape Linkedin Profiles
+                      </p>
+
+                    </div>
+
+                  </a>
+
+                  <a class="list-group-item" href="people-linkedin-profile.html">
+
+                    <!-- Icon -->
+                    <div class="icon icon-sm text-primary">
+                      <i class="neu-user-circle" style="font-size: 24px;"></i>
+                    </div>
+
+                    <!-- Content -->
+                    <div class="ml-4">
+
+                      <!-- Heading -->
+                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
+                        Pricing
+                      </h6>
+
+                      <!-- Text -->
+                      <p class="font-size-sm text-gray-700 mb-0">
+                        Scrape Linkedin Profiles
                       </p>
 
                     </div>
@@ -292,17 +148,23 @@
 
                 </div>
               </div>
-            </li>            
+            </li>
 
             <li class="nav-item">
               <a class="nav-link" id="navbarPages" href="pricing.html">
-                Pricing
+                Connect
               </a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" id="navbarAccount" href="#!">
-                Documentation
+              <a class="nav-link" id="navbarPages" href="pricing.html">
+                Blog
+              </a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" id="navbarPages" href="pricing.html">
+                Docs
               </a>
             </li>
 
@@ -370,8 +232,14 @@
               <!-- Background -->
               <div class="position-absolute top-0 end-0 bottom-0 start-0 bg-gradient-multicolor"></div>
 
-              <!-- Image -->
-              <img alt="..." class="position-relative img-fluid rounded-start" src="Illustration_landscape_placement.png">
+              <!-- Video -->
+              <div class="ratio">
+                <video class="rounded-lg shadow-light-lg bg-light" src="assets/dwarf forms/Dwarf-Forms-demo.webm" autoplay="" loop="" muted="">
+                  Sorry, your browser doesn't support embedded videos,
+                  but don't worry, you can <a href="assets/dwarf forms/Dwarf-Forms-demo.webm">download it</a>
+                  and watch it with your favorite video player!
+                </video>
+              </div>
 
             </div>
 
@@ -439,7 +307,7 @@
           <div class="col-12 col-md-4 order-md-2 text-center">
 
             <!-- Image -->
-            <img class="img-fluid w-75 w-md-100 mb-6 mb-md-0" src="Illustration_landscape_placement.png" alt="...">
+            <img class="img-fluid w-75 w-md-100 mb-6 mb-md-0" src="assets/dwarf forms/df-data-driven illustration.svg" alt="Data-driven illustration">
 
           </div>
           <div class="col-12 col-md-7 order-md-1 mb-6">
@@ -477,7 +345,7 @@
               <!-- Body -->
               <div class="card-body my-auto">
 
-                <img class="img-fluid mb-4" width="48" src="assets/img/icons/Call the API.svg">
+                <img alt="email icon" class="img-fluid mb-4" width="56" src="assets/dwarf forms/email.svg">
 
                 <!-- Heading -->
                 <h3 class="mt-auto">
@@ -554,7 +422,7 @@ response = requests.get(api_endpoint,
               <!-- Body -->
               <div class="card-body my-auto">
 
-                <img class="img-fluid mb-4" width="48" src="assets/img/icons/Poll our API for results.svg">
+                <img alt="globe icon" class="img-fluid mb-4" width="56" src="assets/dwarf forms/globe.svg">
 
                 <!-- Heading -->
                 <h3 class="mt-auto">
@@ -631,7 +499,7 @@ response = requests.get(api_endpoint,
               <!-- Body -->
               <div class="card-body my-auto">
 
-                <img class="img-fluid mb-4" width="48" src="assets/img/icons/Webhook notification.svg">
+                <img alt="bag icon" class="img-fluid mb-4" width="56" src="assets/dwarf forms/bag.svg">
 
                 <!-- Heading -->
                 <h3 class="mt-auto">
@@ -708,7 +576,7 @@ response = requests.get(api_endpoint,
               <!-- Body -->
               <div class="card-body my-auto">
 
-                <img class="img-fluid mb-4" width="48" src="assets/img/icons/Do work to retrieve verified address.svg">
+                <img alt="database icon" class="img-fluid mb-4" width="56" src="assets/dwarf forms/database.svg">
 
                 <!-- Heading -->
                 <h3 class="mt-auto">
