add pricing pagae

--- a/dwarf-forms.html
+++ b/dwarf-forms.html
@@ -63,11 +63,11 @@
               <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDocumentation">
                 <div class="list-group list-group-flush">
 
-                  <a class="list-group-item" href="people-linkedin-profile.html">
+                  <a class="list-group-item" href="dwarf-forms-pricing.html">
 
                     <!-- Icon -->
                     <div class="icon icon-sm text-primary">
-                      <i class="neu-user-circle" style="font-size: 24px;"></i>
+                      <i class="neu-dollar" style="font-size: 24px;"></i>
                     </div>
 
                     <!-- Content -->
@@ -80,7 +80,7 @@
 
                       <!-- Text -->
                       <p class="font-size-sm text-gray-700 mb-0">
-                        Scrape Linkedin Profiles
+                        Dwarf Forms Pricing
                       </p>
 
                     </div>
@@ -98,11 +98,11 @@
               <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDocumentation">
                 <div class="list-group list-group-flush">
 
-                  <a class="list-group-item" href="people-linkedin-profile.html">
+                  <a class="list-group-item" href="#">
 
                     <!-- Icon -->
                     <div class="icon icon-sm text-primary">
-                      <i class="neu-user-circle" style="font-size: 24px;"></i>
+                      <i class="neu-book" style="font-size: 24px;"></i>
                     </div>
 
                     <!-- Content -->
@@ -115,18 +115,18 @@
 
                       <!-- Text -->
                       <p class="font-size-sm text-gray-700 mb-0">
-                        Scrape Linkedin Profiles
+                        Proxycurl Documentations
                       </p>
 
                     </div>
 
                   </a>
 
-                  <a class="list-group-item" href="people-linkedin-profile.html">
+                  <a class="list-group-item" href="#">
 
                     <!-- Icon -->
                     <div class="icon icon-sm text-primary">
-                      <i class="neu-user-circle" style="font-size: 24px;"></i>
+                      <i class="neu-dollar" style="font-size: 24px;"></i>
                     </div>
 
                     <!-- Content -->
@@ -139,7 +139,7 @@
 
                       <!-- Text -->
                       <p class="font-size-sm text-gray-700 mb-0">
-                        Scrape Linkedin Profiles
+                        Proxycurl Pricing
                       </p>
 
                     </div>
