--- a/dwarf-forms.html
+++ b/dwarf-forms.html
@@ -197,7 +197,7 @@
 
             <!-- Headin -->
             <h1 class="display-3 fw-bold aos-init aos-animate" data-aos="fade-up" data-aos-delay="50">
-              Get an <span class="text-primary">enriched profile</span> about your user with a just the <span class="text-primary">email</span> field in your registration form
+              <span class="text-primary"> Convert 35% more users</span> with a shorter form that gives you more
             </h1>
 
             <!-- Text -->
